# remna

./: .dockerignore  .env.example  Dockerfile  README.md  WEB_ADMIN_BACKLOG.md  docker-compose.override.example.yml  docker-compose.web-admin.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh
api/: main.py
bot/: background_loops.py  bootstrap_db.py  factory.py  main.py
docs/: billing-gb-state-machine.md  device-billing-idempotency.md  mariadb-migration-future.md  payg-vpn-system-master-plan.md  phase0-inventory.md  phase1-rollout.md
migrations/: env.py
scripts/: add_subscription_expiry_notify_columns.sql  bot-entrypoint.sh  merge_bonus_balance_into_balance.sql  notify_telegram_backup.py  release_check_phase1.py
shared/: __init__.py  admin_dotenv.py  config.py  database.py  db_mariadb_future.py  md2.py  subscription_qr.py  telegram_utils.py  tickets_db_compat.py
tests/: test_balance_floor_panel.py  test_billing_calculator.py  test_billing_calendar_package_month.py  test_billing_package_boundaries.py  test_detail_service_helpers.py  test_first_topup_bonuses.py  test_negative_balance_windows.py  test_rating_charge_gb_integration.py  test_rating_device_daily_integration.py  test_referrer_topup_reward.py  test_remnawave_reissue_subscription.py  test_telegram_replace_messages.py  test_telegram_webhook_route.py  test_traffic_meter_poll.py  test_transition_and_webhook_ids.py  test_webhook_device_identity_meta.py  test_webhook_processing.py  test_webhook_signature.py
tickets/: __init__.py  config.py  handlers_admin.py  main.py  (+6 more)
(+127 files in other folders)
