[project]
name = "remna-vpnbot"
version = "0.1.0"
description = "VPN Telegram bot + FastAPI (Remnawave)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "redis[hiredis]>=5.0",
    "pydantic-settings>=2.0",
    "SQLAlchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"
